crates/plotnik-lib/src/compiler/emit/snapshots/plotnik_lib__compiler__emit__layout_tests__large_instruction.snap
---
source: crates/plotnik-lib/src/compiler/emit/layout_tests.rs
---
Test = (object
    {(pair) @a (pair) @b (pair) @c (pair) @d}* @items
)
---
[strings]
S0 "Beauty will save the world"
S1 "a"
S2 "b"
S3 "c"
S4 "d"
S5 "items"
S6 "Test"
S7 "object"
S8 "pair"

[type_defs]
T0 = <Node>
T1 = Struct  M0:4  ; { a, b, c, d }
T2 = ArrayStar(T1)  ; T1*
T3 = Struct  M4:1  ; { items }

[type_members]
M0: S1 → T0  ; a: <Node>
M1: S2 → T0  ; b: <Node>
M2: S3 → T0  ; c: <Node>
M3: S4 → T0  ; d: <Node>
M4: S5 → T2  ; items: T2

[type_names]
N0: S6 → T3  ; Test

[entrypoints]
Test = 06 :: T3

[transitions]
_StructWrap:
  00  -ε-  [StructOpen]                     02
  02       Trampoline                       03
  03  -ε-  [StructClose]                    05
  05                                        ▶

Test:
  06   !   (object)                         08
  07  ...  
  08  -ε-  [ArrayOpen]                      28, 14
  10  -ε-                                   11
  11  ─‣┘  [ArrayClose Set(M4)] _           13
  13                                        ▶
  14  -ε-  [ArrayClose Set(M4)]             13
  16  -ε-  [StructClose Push]               32, 10
  18  ─‣─  (pair) [Node Set(M3)]            16
  20  ─‣─  (pair) [Node Set(M2)]            18
  22  ─‣─  (pair) [Node Set(M1)]            20
  24   !   [StructOpen] (pair) [Node Set(M0)]  22
  26  ─‣─  _                                24, 26
  28  └‣─  _                                24, 26
  30  ─‣─  _                                24, 30
  32  ─‣─  _                                24, 30
