crates/plotnik-lib/src/compiler/emit/snapshots/plotnik_lib__compiler__emit__layout_tests__linear_chain.snap
---
source: crates/plotnik-lib/src/compiler/emit/layout_tests.rs
---
Test = (array (identifier) @a (number) @b)
---
[strings]
S0 "Beauty will save the world"
S1 "a"
S2 "b"
S3 "Test"
S4 "array"
S5 "identifier"
S6 "number"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { a, b }

[type_members]
M0: S1 → T0  ; a: <Node>
M1: S2 → T0  ; b: <Node>

[type_names]
N0: S3 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_StructWrap:
  00  -ε-  [StructOpen]                     02
  02       Trampoline                       03
  03  -ε-  [StructClose]                    05
  05                                        ▶

Test:
  06   !   (array)                          08
  07  ...  
  08  └‣─  (identifier) [Node Set(M0)]      10
  10  ─‣─  (number) [Node Set(M1)]          12
  12  ─‣┘  _                                13
  13                                        ▶
